--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -34,12 +34,12 @@ $(PROJECT_NAME):all
 # Run the target even if the matching name exists
 .PHONY: run clean test doc all
 
-all: $(SRC) $(BUILD)
-	gcc $(SRC) $(INC) -o $(PROJECT_OUTPUT).out
+all: 
+	gcc $(SRC) $(INC) -o a.out
 
 # Call `make run` to run the application
 run:$(PROJECT_NAME)
-	./$(PROJECT_OUTPUT).out
+	./a.out
 
 # Document the code using Doxygen
 doc:
