--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -49,7 +49,9 @@ doc:
 test:$(BUILD)
 	gcc $(TEST_SRC) $(INC) -o $(TEST_OUTPUT) $(INCLUDE_LIBS)
 	./$(TEST_OUTPUT)
-
+coverage:
+	
+	gcov -a project_main.c
 # Remove all the built files, invoke by `make clean`
 clean:
 	rm -rf $(BUILD) $(DOCUMENTATION_OUTPUT)
